# treelemetry

./: .gitignore  DEPLOYMENT.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
data_sleigh/: DEPLOYMENT.md  Dockerfile  README.md  deploy-data-sleigh.example.sh  docker-entrypoint.sh  main.py  pyproject.toml  run-docker-data-sleigh.example.sh
data_sleigh/config/: data_sleigh.example.toml
data_sleigh/src/data_sleigh/: __init__.py  aggregator.py  alerting.py  analyzer.py  app.py  backup.py  config.py  mqtt_client.py  storage.py  uploader.py  yolink_client.py
data_sleigh/tests/: __init__.py  conftest.py  test_backup.py  test_config.py  test_season_behavior.py  test_storage.py
data_sleigh/tools/: create_sample_data.py  generate_json.py  merge_databases.py
docs/: index.html
docs/assets/: index-26bo-Ou-.js  index-BSEpHgGh.js  index-BZUA54md.js  index-Bqs0GymH.js  index-CACZMgn-.css  index-CLt6s43Z.js  index-CVsazsy7.css  index-CdUplagt.js  index-Cti_uLkd.css  index-DaPOxL67.js  index-DbX-2Vf_.css  index-DtFhzjoH.js  index-KUz99vhT.css  index-eEuLzRMj.css
infrastructure/: README.md  app.py  cdk.json  pyproject.toml
infrastructure/infrastructure/: stack.py
mqtt_logger/: .cursorrules  .dockerignore  .gitignore  ALERTING.md  BUILD_NOTES.md  CHRISTMAS_TREE.md  DEPLOYMENT_SUMMARY.md  DOCKER.md  Dockerfile  ENV_VAR_OVERRIDE.md  LICENSE  Makefile  QUICKSTART.md  README.md  SD_CARD_OPTIMIZATION.md  build-docker.sh  docker-entrypoint.sh  main.py  mqtt-logger.service  pyproject.toml  run-docker.example.sh  run-docker.sh
mqtt_logger/config/: mqtt_logger.example.toml
mqtt_logger/examples/: README.md  christmas-tree-docker.sh
mqtt_logger/src/mqtt_logger/: __init__.py  app.py  config.py  storage.py  yolink_client.py
mqtt_logger/tests/: __init__.py  conftest.py  test_alerting.py  test_app.py  test_config.py  test_mqtt_client.py  test_storage.py  test_yolink_client.py
mqtt_logger/tools/: debug-email.sh  test-email-in-container.sh
site/: README.md  index.html  package-lock.json  package.json  vite.config.js
site/public/: CNAME
site/src/: config.js  main.js  style.css
uploader/: BUGFIX.md  CLEANUP_INSTRUCTIONS.md  Dockerfile  README.md  env.example  generate_json.py  pyproject.toml  run-docker.example.sh  run-docker.sh  sample_data.py  test_aggregation.py  test_quick.sh
uploader/src/: uploader.py
