[project]
name = "treelemetry-uploader"
version = "0.1.0"
description = "Upload Christmas tree water level data from DuckDB to S3"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "boto3>=1.34.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

